Scheduleモデルを消去し、全てTaskモデルで行えるように変更

--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -2,8 +2,13 @@ div.font-ferrum.d-flex.justify-content-between.mt-3.mx-5.border-b
   div
     = link_to 'Task Quest', root_path, class: 'header-title-style'
   div.d-flex
-    = link_to 'Sign up', new_users_path, class: 'header-menu-style'
-    = link_to 'Login', login_path, class: 'header-menu-style'
-    = link_to 'Guide', root_path, class: 'header-menu-style', id: "guidelink"
-    = link_to 'Information', root_path, class: 'header-menu-style', id: "informationlink"
-    = link_to 'help', root_path, class: 'header-menu-style', id: "helplink"
+    div
+      a.header-menu-style href= "/users/new" Sign up
+    div
+      a.header-menu-style href= "/login" Login
+    div
+      a.header-menu-style href= "/#guide" Guide
+    div
+      a.header-menu-style href= "/#information" Information
+    div
+      a.header-menu-style href= "/#help" Help
