--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,29 @@
   color:#ea2c2c;
  }
 
+ #task_start_date-error{
+  font-size:80%;
+  font-family: 'font-ja';
+  color:#ea2c2c;
+ }
+ #task_end_date-error{
+  font-size:80%;
+  font-family: 'font-ja';
+  color:#ea2c2c;
+ }
+
+ #task_errors_end_date{
+   .error{
+     font-size: 80%;
+   }
+ }
+
+ #task_errors_start_date{
+  .error{
+    font-size: 80%;
+  }
+}
+
 header{
   padding-top: 8px;
   z-index: 2;
@@ -625,12 +648,34 @@ input[type="file"] {
 
 .card-style{
   border-color: #989898;
-  
+  position: relative;
 }
 
 .card-style-complete{
   border-color: #6e6e6e;
   position: relative;
+}
+
+.draft-overlay{
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  a{
+    z-index: 2;
+    font-family: 'font-ja';
+    text-decoration: none;
+    color:#cfcfcf;
+    
+  }
+  
 }
 
 .card-overlay{
@@ -951,4 +996,21 @@ $i: 1;
       text-decoration: none;
     }
   }
+}
+
+.today_task_groups{
+  display: none;
+}
+
+.show{
+  display: block;
+  transform: translate(0);
+}
+
+.error-my-mission{
+  font-family: 'font-ja';
+  font-size: 90%;
+  text-align: center;
+  background-color: #cf9b9b;
+  color: #853030;
 }
