--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,4 +19,5 @@ html
       div.font-ferrum.breadcrumbs.float-right.text-white
         = breadcrumbs separator: " &rsaquo; "
     = yield
+    = render partial: 'layouts/profile_modal', locals: { user: current_user }
     
