--- a/app/views/missions/_mission.html.slim
+++ b/app/views/missions/_mission.html.slim
@@ -10,7 +10,13 @@ div.col-md-3.mt-5.px-4
       - else
           p.mb-0.page-title-card.text-center 下書き
     div.card-body.px-0.py-0
-      = link_to 'My mission', registration_mission_path(mission), method: :post
+      div class="error_mission_my_mission_#{mission.id} error_mission_my_mission"
+      = link_to 'My mission', registration_mission_path(mission), method: :post, remote: true
+      - if mission.draft?
+        div.draft-overlay
+          = link_to '下書きを解除', status_change_mission_path(mission.id), method: :post
+      - else
+        = link_to '下書きにする', status_change_mission_path(mission.id), method: :post
       div.d-flex.align-items-end
         div.px-3.px-0.w-100
           div.w-100
@@ -20,12 +26,14 @@ div.col-md-3.mt-5.px-4
               i.fas.fa-trash
             a.js-modal-open href="" data-target="modal_mission_edit_#{mission.id}" 
               i.fas.fa-pen
+            = link_to "Mission Start", mission_tasks_path(mission), class: "card-title"
           div.w-100
             - if mission.end_date <= Date.today
               - if mission.incomplete?
                 = link_to 'Missionを完了する', finish_mission_path(mission), method: :post,class: "w-100 text-center"
               - elsif mission.complete?
                 = link_to 'Missionを未完了にする', finish_mission_path(mission), method: :post,class: "w-100 text-center"
+            
     div.card-footer.card-header-footer.text-center.py-2
       p.mb-0.font-ferrum #{l mission.start_date, format: :short}~#{l mission.end_date, format: :short}
       
