--- a/app/views/shared/_login_header.html.slim
+++ b/app/views/shared/_login_header.html.slim
@@ -3,15 +3,18 @@ div.font-ferrum.d-flex.bd-highlight.mt-3.mx-5.border-b
     = link_to 'Task Quest', root_path, class: 'header-title-style'
   div.bd-highlight.d-flex.mr-4
       
-    
-    - if current_page?(root_path) || current_page?(new_users_path) || current_page?(login_path) || current_page?(privacy_path)
-      = render 'header/header_01'
-    - elsif current_page?(users_path)
-      = render 'header/users_path_header'
-    - elsif current_page?(new_mission_path)
-      = render 'header/new_mission_header'
-    - elsif current_page?(mission_tasks_path(params[:mission_id])) || current_page?(new_mission_schedule_path(params[:mission_id]))||current_page?(mission_task_notes_path(params[:mission_id], params[:task_id]))
-      = render 'header/task_schedule_note_header'
+    div
+      a.header-menu-style href= "/" Top
+    div
+      a.header-menu-style href= "/users" My page
+    div
+      a.header-menu-style href= "/missions/new" New mission
+    - if @my_mission.present?
+      div.header-menu-style.font-SoukouMincho
+        = link_to "#{@my_mission.title}", mission_tasks_path(@my_mission)
+    div
+      a.header-menu-style href= "/privacy#privacy" Privacy
+  
   div.bd-highlight.w-20
     div.mr-3
       = image_tag current_user.avatar(:small_icon), class: 'small-icon-size'
@@ -21,15 +24,6 @@ div.font-ferrum.d-flex.bd-highlight.mt-3.mx-5.border-b
       div#menu.collapse.z-in-1.header-dropdown-position.w-80.text-center
         div.w-80.mx-auto
           div.dropdown-style
-            = link_to 'Top', root_path
-          div.dropdown-style
-            = link_to 'My page', users_path
-          div.dropdown-style.task-border
-            = link_to 'New mission', new_mission_path
-          - if @my_mission.present?
-            div.dropdown-style.task-border
-              = link_to 'Play task', mission_tasks_path(@my_mission)
-            div.dropdown-style.task-border
-              = link_to 'New schedule', new_mission_schedule_path(@my_mission)
-          div.dropdown-style
-            = link_to('Logout', logout_path, method: :delete)
+            a.js-modal-open.font-SoukouMincho href="" data-target="modal01" プロフィール編集
+          div.dropdown-style.font-SoukouMincho
+            = link_to('ログアウト', logout_path, method: :delete)
