ウィンドウ表示速度改善

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -35,14 +35,14 @@ div
             div.d-flex.justify-content-start.my-2.ml-2.align-items-center
               p.font-ferrum.mb-0 TaskQuest
               p.font-SoukouMincho.mb-0 をプレイするにあたって
-              h2#info-slide1.mb-0.ml-auto.mr-2 −
+              h2#info-slide1.mb-0.ml-auto.mr-2.cursor-pointer −
             div#info-slide-menu1
               p.w-90.mx-auto TaskQuestはGuideを確認しながらプレイして下さい。またプレイ前には必ずプライバシーポリシーを確認して下さい。
           div.form-style.my-3
             div.d-flex.justify-content-start.my-2.ml-2.align-items-center
               p.font-ferrum.mb-0 TaskQuest
               p.font-SoukouMincho.mb-0 へようこそ
-              h2#info-slide2.mb-0.ml-auto.mr-2 −
+              h2#info-slide2.mb-0.ml-auto.mr-2.cursor-pointer −
             div#info-slide-menu2
               p.w-90.mx-auto TaskQuestへようこそ！TaskQuestはまるでゲームをプレイするような感覚で普段のタスク管理を行えるアプリです。TaskQuestを使って楽しくタスク管理をしましょう！！
         div.col-md-2
