--- a/app/views/layouts/_profile_modal.html.slim
+++ b/app/views/layouts/_profile_modal.html.slim
@@ -2,30 +2,34 @@
   div#modal01.modal.js-modal
     div.modal__bg.js-modal-close
     div.modal__content
-      div.container-fluid.mb-3.mt-3
-        h1.page-title-modal.w-100.text-center　プロフィール編集
+      div.container-fluid.my-3.text-center
+        h1.page-title-modal.w-100　プロフィール編集
       div.container
-        div.row
-          div.container
-            p.font-SoukouMincho.text-center.text-black-50 プロフィールの編集ができます
-          div.container
-            = form_with model: user, url: users_path, remote: true, method: :patch, id: 'profile_form' do |f|
-              div#js-icon-validation
-              div.form-inline
-                div.w-17.mr-3
-                  div.form-group.mb-1
-                    div.icon_preview.w-100.text-center
-                      = image_tag user.avatar(:edit_icon), class: 'edit-icon-size mx-auto mb-3'
-                    = f.label :icon, '画像を選択', class: "icon-btn-style"
-                    = f.file_field :icon, class: "btn-style-image"
-                div.w-70
-                  div.form-group.mb-1
-                    = f.label :name, 'User name', {class: 'form-field-modal mb-2'}
-                    = f.text_field :name, class: 'form-style-modal font-weight-lighter', id: 'user_name', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
-                  div.form-group.mb-1
-                    = f.label :email, 'Email', {class: 'form-field-modal mb-2'}
-                    = f.text_field :email, class: 'form-style-modal', id: 'user_email', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
-                    div#unique_email
-              div.text-center.mt-3.w-55.mx-auto
-                button.js-modal-close.btn-style-modal 戻る
-                = f.submit '変更', class: "btn-style-modal"
+        p.font-SoukouMincho.text-center.text-black-50 プロフィールの編集ができます
+        div
+          = form_with model: user, url: users_path, remote: true, method: :patch, id: 'profile_form' do |f|
+            div#js-icon-validation
+            div.form-inline
+              div.container
+                div.row
+                  div.col-md-3
+                    div.form-group.mb-1.text-center
+                      div.icon_preview.w-100.text-center
+                        = image_tag user.avatar(:edit_icon), class: 'edit-icon-size mx-auto mb-3'
+                      = f.label :icon, '画像を選択', class: "icon-btn-style"
+                      = f.file_field :icon, class: "btn-style-image"
+                  div.col-md-9
+                    div.form-group.mb-1
+                      = f.label :name, 'User name', {class: 'form-field-modal mb-2'}
+                      = f.text_field :name, class: 'form-style-modal font-weight-lighter', id: 'user_name', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
+                    div.form-group.mb-1
+                      = f.label :email, 'Email', {class: 'form-field-modal mb-2'}
+                      = f.text_field :email, class: 'form-style-modal', id: 'user_email', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
+                      div#unique_email
+                div.row.my-3
+                  div.col-md-1
+                  div.col-md-4.text-center
+                    button.js-modal-close.btn-style-modal.w-100 戻る
+                  div.col-md-2
+                  div.col-md-4.text-center
+                    = f.submit '変更', class: "btn-style-modal w-100"
