--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -27,8 +27,8 @@
           div.btn-style-white-border
             button.js-modal-open.btn-style-white.w-100 href="" data-target="modal02" アカウント削除
         
-#missions.container-fluid.mb-3
-  div.d-flex.mt-5.border-b.mb-4
+#missions.container-fluid.mb-3.pt-5
+  div.d-flex.border-b.mb-4
     h1.page-title.float-left.ml-5 Missions
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border ミッション
   div.text-center
@@ -75,8 +75,12 @@ div#modal02.modal.js-modal
           p.font-s-modal ・スケジュールデータ
           p.font-s-modal ・タスクデータ
           p.font-s-modal ・ノートデータ
-          div.mt-3.text-center
-            button.js-modal-close.btn-style-modal 戻る
-            = button_to '削除', users_path, method: :delete, class: "btn-size d-inline", data: {confirm: "削除しますか？"}
+          div.container
+            div.row.my-3
+              div.col-md-5.text-center.mt-3
+                button.js-modal-close.btn-style-modal.w-100 戻る
+              div.col-md-2
+              div.col-md-5.text-center.mt-3
+                = button_to '削除', users_path, method: :delete, class: "red-btn-size w-100", data: {confirm: "削除しますか？"}
 
 = render partial: 'missions/mission_modal', collection: @missions, as: :mission
