--- a/app/views/tasks/_past_task.html.slim
+++ b/app/views/tasks/_past_task.html.slim
@@ -1,5 +1,5 @@
   div.container.mb-3
-    div.card.past-card-style-#{task.status}
+    div class="card past-card-style-#{task.status}"
       div.card-body.px-0.py-0
         div.border-b.py-2.px-3.d-flex.justify-content-between.position-relative
           - if task.status == "complete"
